web-infras/parser/tests/fixtures/babel/core/uncategorised/481/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,33)
1|function hello() {'use strict'; arguments--; }
 |                               ^
